# vulkan

Sample5_1/: settings.gradle.kts
Sample5_1/app/: build.gradle.kts
Sample5_1/app/src/main/: AndroidManifest.xml
Sample5_1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Sample5_1/gradle/wrapper/: gradle-wrapper.properties
Sample5_2/: settings.gradle.kts
Sample5_2/app/: build.gradle.kts
Sample5_2/app/src/main/: AndroidManifest.xml
Sample5_2/app/src/main/assets/: commonTexLight.frag  commonTexLight.vert
Sample5_2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Sample5_2/gradle/wrapper/: gradle-wrapper.properties
Sample5_3/: settings.gradle.kts
Sample5_3/app/: build.gradle.kts
Sample5_3/app/src/main/: AndroidManifest.xml
Sample5_3/app/src/main/assets/: commonTexLight.vert
Sample5_3/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Sample5_3/gradle/wrapper/: gradle-wrapper.properties
Sample6_1/: settings.gradle.kts
Sample6_1/app/: build.gradle.kts
Sample6_1/app/src/main/: AndroidManifest.xml
Sample6_1/app/src/main/assets/: commonTexLight.frag  commonTexLight.vert
Sample6_1/gradle/wrapper/: gradle-wrapper.properties
TriangleJNI/: settings.gradle.kts
TriangleJNI/app/: build.gradle.kts
TriangleJNI/app/src/main/: AndroidManifest.xml
TriangleJNI/gradle/wrapper/: gradle-wrapper.properties
TriangleNative/: settings.gradle.kts
TriangleNative/app/: build.gradle.kts
TriangleNative/app/src/main/: AndroidManifest.xml
TriangleNative/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TriangleNative/app/src/main/cpp/base/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanRaytracingSample.cpp
TriangleNative/gradle/wrapper/: gradle-wrapper.properties
(+112 files in other folders)
